<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">.Tài chính cá nhân</string>

    <string name="bill_detail">Chi tiết giao dịch:</string>
    <string name="bill_go_with">Cùng với:</string>
    <string name="bill_location">Địa điểm:</string>
    <string name="bill_title">Thông tin giao dịch</string>

    <string name="cant_create_empty_bill">Bạn không thể tạo một hóa đơn mà không có chi tiết giao dịch nào</string>

    <string name="content">Là một bài toán của bất kì ai. Nhưng ko phải ai cũng có thời gian để giải quyết bài toán ấy.</string>

    <string name="create_wallet_title">Tạo ví mới</string>

    <string name="currency_unit">đ</string>

    <string name="edit_bill_title">Chỉnh sửa giao dịch</string>
    <string name="edit_wallet_delete_button">Xóa ví và toàn bộ giao dịch</string>
    <string name="edit_wallet_delete_last_wallet">Không thể xóa ví duy nhất hiện có</string>
    <string name="edit_wallet_title">Sửa ví</string>

    <string name="error_empty_wallet_name">Tên ví không được để trống</string>
    <string name="error_features_not_developed_yet">Tính năng này vẫn đang được phát triển</string>

    <string name="facebook_app_id">2071312033150967</string>

    <string name="fb_login_protocol_scheme">fb2071312033150967</string>

    <string name="hint_location">Nhà riêng, trường học, công ty…</string>
    <string name="hint_object_name">Chai nước, cây bút…</string>
    <string name="hint_with">Bạn bè, người thân…</string>

    <string name="icon">Icon</string>
    <string name="icon_advanced"></string>
    <string name="icon_back"></string>
    <string name="icon_done"></string>
    <string name="icon_location"></string>
    <string name="icon_person"></string>

    <string name="list_of_wallet_title">Chọn một ví</string>

    <string name="login_1_content">Bằng cách nhập tay hay tương tác giọng nói bạn có thể ghi chép các khoản thu chi của bản thân một cách đơn giản và nhanh chóng nhất.</string>
    <drawable name="login_1_icon">@drawable/ic_list</drawable>
    <string name="login_1_title">Ghi chép dễ dàng</string>
    <string name="login_2_content">Biểu đồ phân tích trực quan cho phép bạn có được cái nhìn dễ hình dung nhất về tình hình tài chính của bạn.</string>
    <drawable name="login_2_icon">@drawable/ic_report</drawable>
    <string name="login_2_title">Quản lý hiệu quả</string>
    <string name="login_3_content">Thiết lập mức chi tiêu trong ngân sách bạn đặt ra sẽ giúp bạn tránh được việc chi tiêu ngoài tâm kiểm soát</string>
    <drawable name="login_3_icon">@drawable/ic_filter</drawable>
    <string name="login_3_title">Kiểm soát chi tiêu</string>
    <string name="login_with_facebook_button">Đăng nhập với Facebook</string>

    <string name="number_99">99</string>

    <string name="object_name_must_have_more_than_3_characters">Tên của món đồ phải có nhiều hơn 3 kí tự</string>

    <string name="sidebar_logout_button">Đăng xuất</string>
    <string name="sidebar_payloan_button">Sổ nợ</string>
    <string name="sidebar_statistical_button">Thống kê</string>
    <string name="sidebar_tutorial_button">Hướng dẫn</string>

    <string name="time">Thời gian:</string>

    <string name="title">Quản lý tài chính cá nhân</string>

    <string name="wallet_name_field">Tên ví</string>
    <string name="wallet_total">Tổng cộng:</string>
    <string name="wallet_total_field">Số tiền</string>
    <string name="wallet_transactions_count">Số giao dịch:</string>
    <string name="input_name_location">Địa điểm</string>
    <string name="input_name_with">Đi cùng</string>
    <string name="input_name_money">Số tiền</string>
    <string name="input_name_wallet_name">Tên ví</string>
    <string name="hint_input_name">Ví da, tủ tiền, thẻ ngân hàng…</string>
    <string name="hint_wallet_money">~ 200.000</string>

    <string name="icon_edit"></string>
    <string name="icon_wallet"></string>
    <string name="icon_money"></string>
    <string name="edit_bill_advanced_title">Thông tin giao dịch</string>
    <string name="create_bill_title">Tạo giao dịch</string>
    <string name="icon_search"></string>
    <string name="icon_bill"></string>
    <string name="icon_payment"></string>
    <string name="icon_loan"></string>
    <string name="icon_transfer"></string>
    <string name="dialog_yes">Có</string>
    <string name="dialog_no">Không</string>
    <string name="bill_delete_dialog">Bạn có chắc chắn muốn xóa giao dịch?</string>
    <string name="wallet_delete_dialog">Bạn có chắc chắn xóa ví và toàn bộ giao dịch?</string>
    <string name="input_name_type">Kiểu giao dịch</string>
</resources>
