<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EditBillAdvancedActivity">

    <data>

        <import type="uit.money.adapter.BillDetailEditRecyclerViewAdapter"/>

        <variable
            name="state"
            type="uit.money.activity.EditBillAdvancedActivity.State"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:fitsSystemWindows="true">

        <ui.Col
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@color/gray"
            android:padding="10dp">

            <ui.FrameShadow
                style="@style/item_shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ui.Col
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layerType="hardware">


                    <ui.Row
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size">

                        <ui.Text
                            style="@style/icon"
                            android:layout_width="@dimen/input_size"
                            android:layout_height="@dimen/input_size"
                            android:gravity="center"
                            android:text="@string/icon_location"
                            android:textColor="@color/primary_dark"
                            app:_autoPadding="false"/>

                        <ui.InputText
                            style="@style/input_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/hint_location"
                            android:textSize="@dimen/input_text_size"
                            tools:ignore="RtlSymmetry"/>

                    </ui.Row>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primary"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp"/>

                    <ui.Row
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size">

                        <ui.Text
                            style="@style/icon"
                            android:layout_width="@dimen/input_size"
                            android:layout_height="@dimen/input_size"
                            android:gravity="center"
                            android:text="@string/icon_person"
                            android:textColor="@color/primary_dark"
                            app:_autoPadding="false"/>

                        <ui.InputText
                            style="@style/input_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/hint_with"
                            android:textSize="@dimen/input_text_size"
                            tools:ignore="RtlSymmetry"/>

                    </ui.Row>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primary"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp"/>

                </ui.Col>

            </ui.FrameShadow>
        </ui.Col>

        <ui.FrameShadow style="@style/top_bar">

            <ui.Row
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ui.Button
                    style="@style/button"
                    android:layout_width="50dp"
                    android:onClick="back"
                    app:_icon="@string/icon_back"/>

                <View style="@style/vr_line"/>

                <ui.Text
                    style="@style/text"
                    android:layout_weight="1"
                    android:text="Thông tin giao dịch"/>

                <ui.Button
                    style="@style/button"
                    android:layout_width="50dp"
                    android:onClick="done"
                    app:_icon="@string/icon_done">

                </ui.Button>
            </ui.Row>
        </ui.FrameShadow>
    </FrameLayout>
</layout>