<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.BillActivity">

    <data>

        <import type="android.view.View"/>

        <import type="model.Utils"/>

        <import type="uit.money.adapter.BillDetailRecyclerViewAdapter"/>

        <variable
            name="state"
            type="uit.money.activity.BillActivity.State"/>

        <variable
            name="bill"
            type="model.model.transaction.Bill"/>
    </data>

    <ui.Col style="@style/root_col">

        <ui.Row style="@style/action_row">

            <ui.Button
                style="@style/button"
                android:layout_width="50dp"
                android:onClick="back"
                app:_icon="@string/icon_back"/>

            <View style="@style/vr_line"/>

            <ui.Text
                style="@style/text"
                android:layout_weight="1"
                android:text="@string/bill_title"/>

            <ui.Button
                style="@style/button"
                android:layout_width="50dp"
                android:onClick="editBill"
                app:_icon="@string/icon_edit"/>

            <ui.Button
                style="@style/button"
                android:layout_width="50dp"
                android:onClick="removeBill"
                app:_icon=""/>

        </ui.Row>

        <ui.FrameShadow
            style="@style/item_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <ui.Col
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ui.Text
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical|start"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@{bill.action}"
                    android:textColor="@color/_item_title"
                    app:_autoSize="true"
                    app:_font="bold"
                    tools:text="Mua/Bán"/>

                <View style="@style/hr_line"/>

                <ui.Row
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/time"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"/>

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@{Utils.getDateTime(bill.time)}"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"
                        tools:text="10/10/10"/>
                </ui.Row>

                <ui.Row
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="@{(bill.location == null || ``.equals(bill.location)) ? View.GONE : View.VISIBLE, default=gone}"
                    tools:visibility="visible">

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/bill_location"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"/>

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@{bill.location}"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"
                        tools:text="bill.location"/>
                </ui.Row>

                <ui.Row
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="@{bill.with == null ? View.GONE : View.VISIBLE, default=gone}"
                    tools:visibility="visible">

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/bill_go_with"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"/>

                    <ui.Text
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@{bill.with.name}"
                        android:textColor="@color/_item_color"
                        android:textSize="15sp"
                        app:_autoPadding="false"
                        app:_font="bold"
                        tools:text="bill.with.name"/>
                </ui.Row>

                <ui.Text
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|start"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/bill_detail"
                    android:textColor="@color/_item_color"
                    android:textSize="15sp"
                    app:_autoPadding="false"
                    app:_font="bold"/>

                <ui.List
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adapter="@{BillDetailRecyclerViewAdapter.getInstance(bill)}"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_bill_detail"/>

                <ui.Col
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp">

                    <View
                        style="@style/hr_line"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"/>

                    <ui.Row
                        android:layout_width="wrap_content"
                        android:layout_height="25dp">

                        <ui.Text
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|end"
                            android:text="@{String.valueOf(bill.maxCount)}"
                            android:textColor="#0000"
                            android:textSize="15sp"
                            app:_font="bold"
                            tools:ignore="RtlSymmetry"
                            tools:text="7"/>

                        <ui.Text
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:focusable="false"
                            android:paddingEnd="15dp"
                            android:paddingStart="15dp"
                            android:text="✕"
                            android:textColor="#0000"
                            android:textSize="15sp"
                            app:_font="bold"
                            tools:ignore="HardcodedText,RtlSymmetry"/>

                        <ui.Text
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center_vertical|end"
                            android:minWidth="80dp"
                            android:text="@{model.Utils.getMoney(bill.money)}"
                            android:textColor="@{bill.moneyColor}"
                            android:textSize="15sp"
                            app:_autoPadding="false"
                            app:_font="bold"
                            tools:text="10.000 đ"
                            tools:textColor="@color/in_color"/>
                    </ui.Row>
                </ui.Col>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
            </ui.Col>
        </ui.FrameShadow>
    </ui.Col>
</layout>